Implemented Spring Boot 3 latest version - WIP