@@ -184,7 +184,7 @@
         <version>${compiler-plugin.version}</version>
         <configuration>
           <compilerArgs>
-            <arg>-parameters</arg>
+            <arg>--enable-preview -parameters</arg>
           </compilerArgs>
         </configuration>
       </plugin>
